fix center close icon on safari

--- a/src/MessageBox/HeaderLayout.scss
+++ b/src/MessageBox/HeaderLayout.scss
@@ -40,7 +40,7 @@
 }
 
 .close > svg {
-    margin-top : 1px;
+    margin           : 1px auto 0 auto;
     path { stroke: #fff; }
 }
 
